# open-2d-studio

./: .gitignore  CLAUDE.md  README.md  blender_sync_bridge.py  blender_watcher.py  index.html  package-lock.json  package.json  sync_model.ifc  vite.config.ts  vitest.config.ts
.claude/: settings.local.json
.github/workflows/: ci.yml  live.yml  release.yml  snap.yml
api-commands/: golden-fibonacci.js  maurer-rose.js  spirograph.js
blender-mcp-bridge/: server.py
blender_addon/: __init__.py
docs/: API.md
scripts/: math-rose.js
snap/: snapcraft.yaml
src/: App.tsx  extensionSdk.ts  extensionSdkGlobal.ts  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  mobile.json
src-tauri/dwg-parser/: Cargo.toml  bitreader.rs  error.rs  lib.rs  parser.rs  r2007.rs
src-tauri/src/: api_server.rs  dwg_parser.rs  lib.rs  main.rs
src-tauri/src/commands/: mod.rs
src/api/: annotations.ts  application.ts  commands.ts  dimensions.ts  document.ts  entities.ts  events.ts  global.d.ts  index.ts  layers.ts  macros.ts  selection.ts  snap.ts  styles.ts  tools.ts  transactions.ts  types.ts  viewport.ts
src/extensions/: extensionApi.ts  extensionLoader.ts  extensionService.ts  index.ts  registryService.ts  types.ts
src/hooks/: useGlobalKeyboard.ts  useIfcAutoRegenerate.ts  useKeyboardShortcuts.ts  useSpaceAutoUpdate.ts
src/services/: claudeCadService.ts  drawingService.ts  fileService.ts  ifcExport.ts  index.ts  parametricService.ts  patService.ts  pdfImportService.ts  sheetTemplateService.ts  svgPatternService.ts  svgTitleBlockService.ts  titleBlockService.ts
src/state/: appStore.ts  documentStore.ts
src/styles/: globals.css
src/types/: dimension.ts  draft.ts  drawing.ts  geometry.ts  guards.ts  hatch.ts  index.ts  parametric.ts  sheet.ts  wefc.ts
src/units/: conversion.ts  (+3 more)
(+247 files in other folders)
