[package]
name = "open-2d-studio"
version = "0.29.0"
description = "A cross-platform 2D CAD application"
authors = ["Open 2D Studio Contributors"]
license = "LGPL-3.0-or-later"
repository = ""
edition = "2021"
rust-version = "1.70"

[lib]
name = "open_2d_studio"
crate-type = ["staticlib", "cdylib", "lib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dxf = "0.6"
tiny_http = "0.12"
clap = { version = "4", features = ["derive"] }
tauri-plugin-http = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
